--- a/src/style.css
+++ b/src/style.css
@@ -25,37 +25,35 @@ img {
 
 /* style */
 body {
-  background: #eee;
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
 }
 .globalHeader {
-  margin: 20px;
+  margin: 0 20px 20px;
+  padding-top: 20px;
 }
 .searchForm {
   display: flex;
   justify-content: space-between;
-}
-@media (min-width: 500px) {
-  .searchForm {
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 160px;
-    margin-bottom: 60px;
-  }
 }
 .searchForm > input {
   width: 100%;
   margin-right: 10px;
   height: 40px;
   padding: 0 10px;
-  border: 1px solid #ddd;
+  /* border: 1px solid #ddd; */
+  border: none;
   border-radius: 4px;
 }
 .searchForm > button {
   white-space: nowrap;
   padding: 0 29px;
-  background: #128dc2;
-  border: 1px solid #dddddd;
+  background-image: radial-gradient(
+    circle farthest-corner at 0.2% 0.3%,
+    rgba(3, 144, 232, 1) 0%,
+    rgba(2, 97, 156, 1) 89.9%
+  );
+  border: none;
   border-radius: 4px;
   font-family: Roboto;
   font-size: 16px;
@@ -69,24 +67,15 @@ body {
   margin-right: auto;
 }
 .siteList {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 0px;
+  margin-right: -20px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-}
-@media (min-width: 500px) {
-  .siteList {
-    margin-left: 0px;
-    margin-right: -20px;
-    justify-content: flex-start;
-  }
-  .siteList > li {
-    margin-right: 20px;
-  }
+  justify-content: center;
 }
 .siteList > li {
   margin-bottom: 10px;
+  margin-right: 20px;
 }
 .siteList .site {
   width: 160px;
@@ -96,7 +85,7 @@ body {
   align-items: center;
   background: white;
   padding: 20px 0;
-  border: 1px solid #ddd;
+  border: none;
   border-radius: 4px;
   position: relative;
   cursor: pointer;
@@ -117,7 +106,6 @@ body {
   position: absolute;
   right: 10px;
   top: 5px;
-  display: none;
   cursor: default;
 }
 .siteList .site:hover > .close {
@@ -148,3 +136,31 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+@media (min-width: 500px) {
+  body {
+    min-width: 100vh;
+    min-height: 100vh;
+  }
+  .searchForm {
+    max-width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 100px;
+    margin-bottom: 60px;
+  }
+}
+@media (min-width: 500px) {
+  .siteList {
+    margin-left: 0px;
+    margin-right: -20px;
+    justify-content: flex-start;
+  }
+  .siteList > li {
+    margin-right: 20px;
+  }
+  .siteList .site > .close {
+    display: none;
+  }
+}
+
